[BUGFIX] Improve CKEditor5 whitespace plugin usability
 * Use insertText command as provided by @ckeditor/ckeditor5-typing
   to match the behaviour of the upstream specialcharacters plugin:
   * Place cursor after inserted text
   * Replace existing selection when applying the button/shortcut
   * Disable button in source-editing mode
     (also fix ckeditor5 integration to work in case source-editing
     mode is disabled, to be able to test/verify that case)
 * Add tooltip to the toolbar button
 * Add a shortcut hint to the toolbar button tooltip
 * Show consecutive softhyphens
 * Show selections on softhypens and non-breaking-spaces

Resolves: #101728
Releases: main, 12.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/81337
Tested-by: Benjamin Franzke <ben@bnf.dev>
Tested-by: core-ci <typo3@b13.com>

--- a/typo3/sysext/rte_ckeditor/Resources/Public/Css/editor.css
+++ b/typo3/sysext/rte_ckeditor/Resources/Public/Css/editor.css
@@ -14,23 +14,15 @@
 }
 
 .ck.ck-softhyphen {
-    border-radius: .15em;
     color: #0078e6;
     background-color: rgba(0,120,230,.1);
-}
-
-.ck.ck-softhyphen:before {
-    content: '–';
-    margin-left: .1em;
-    margin-right: .1em;
+    padding-left: .1em;
+    padding-right: .1em;
 }
 
 .ck.ck-nbsp {
-    border-radius: .15em;
     color: #c83c3c;
     background-color: rgba(200,60,60,.1);
-}
-
-.ck.ck-nbsp:before {
-    content: ' ';
+    padding-left: .1em;
+    padding-right: .1em;
 }
